Fix Original Spacing

--- a/source/styles/contentScript.scss
+++ b/source/styles/contentScript.scss
@@ -1,7 +1,3 @@
-.api {
-    margin-left: calc(10vw + 6ex) !important;
-}
-
 .api > table
 {
     background: none !important;
